force-app/main/default/objects/Pago__c/Pago__c.object-meta.xml
<CustomObject>
    <description>Objecto para pagos</description>
    <label>Pago</label>
    <nameField>
        <label>Pago Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>