force-app/main/default/objects/Pago__c/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <description>Forma de Pago</description>
    <label>Metodo_Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Efectivo</fullName>
                <default>true</default>
                <label>Efectivo</label>
            </value>
            <value>
                <fullName>PayPal,</fullName>
            </value>
            <value>
                <fullName>Transferencia,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>