force-app/main/default/objects/Pago__c/fields/Referencia_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Transaccion__c</fullName>
    <label>Referencia_Transaccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>